# DeepLearningSpeechRecognition

./: .gitignore  pyproject.toml  requirements.txt
src/: CopyUnknownFiles.py  EDACharts.ipynb  ExtendFiles.py  GenerateSpectrograms.py  Labels.py  Notebook.ipynb  Paths.py  PrepareDataset.ipynb  PrintLabels.py  SerializeToJsonFile.py  SimpleModels.ipynb  SpectrogramLoading.py  SplitDataset.py  SplitNoiseFiles.py  Testing.ipynb  __init__.py
src/Constants/: Paths.py  __init__.py
src/EDA scripts/: CalculateMeanAmplitude.py  CalculateRMSAmplitudes.py  CollectLengthsByWord.py  CollectMetadata.py  CountFilesInLabels.py  RMSAmplitudeByWord.py  SpeakersHistogram.py
src/Models/: CnnModel.py  HistoryPlots.py  InputPadding.py  ModelBase.py  RandomUndersampler.py  SpectrogramDataset.py  TrainingHistory.py  TransformerModel.py  WandbDetails.py
src/Preprocessing/: GenerateSpectrograms.py
src/Unpacking/: ExtendFiles.py  PrepareAudioFiles.py  SplitDataset.py  SplitNoiseFiles.py
